--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -13,10 +13,11 @@ jobs:
       - uses: actions/checkout@v3
       - uses: subosito/flutter-action@v2.10.0
         with:
-          channel: 'dev'
+          channel: 'stable'
       - run: flutter config --enable-web
       - run: flutter pub get
-      - run: flutter build web --release
+      - run: flutter test
+      - run: flutter build web
         # 1. change path which exist lib/main.dart
         working-directory: ./web_page
       - run: |
