--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -19,10 +19,10 @@ jobs:
       - run: flutter test
       - run: flutter build web
         # 1. change path which exist lib/main.dart
-        working-directory: ./
+        working-directory: ./web_page
       - run: |
           # 2. change path to [existed lib/main.dart path]/build/web
-          cd web_page/build/web
+          cd ./build/web
           git init
            # 3. change your email
           git config --global user.email mindw96@naver.com
