--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -18,7 +18,7 @@ jobs:
       - run: flutter pub get
       - run: flutter build web
         # 1. change path which exist lib/main.dart
-        working-directory: ./web_page
+        # working-directory: ./web_page
       - run: |
       
          # 2. change path to [existed lib/main.dart path]/build/web
