--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -25,9 +25,13 @@ jobs:
       - run: git config --global user.name mindw96
       - run: git status
       
-      - run: git remote remove origin
-      - run: git remote add origin https://github.com/mindw96/web_page.git 
-      - run: git checkout -b update-pages
-      - run: git add --all
-      - run: git commit -m "update"
-      - run: git push origin update-pages -f
+      - run: git --work-tree build/web add --all
+      - run: git commit -m "Automatic update"
+      - run: git push origin HEAD:update-pages --force
+      
+#       - run: git remote remove origin
+#       - run: git remote add origin https://github.com/mindw96/web_page.git 
+#       - run: git checkout -b update-pages
+#       - run: git add --all
+#       - run: git commit -m "update"
+#       - run: git push origin update-pages -f
