--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -41,11 +41,5 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./
+          publish_dir: ./build/web
       
-#       - run: git remote remove origin
-#       - run: git remote add origin https://github.com/mindw96/web_page.git 
-#       - run: git checkout -b update-pages
-#       - run: git add --all
-#       - run: git commit -m "update"
-#       - run: git push origin update-pages -f
