--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -14,6 +14,10 @@ jobs:
       - uses: subosito/flutter-action@v2.10.0
         with:
           channel: 'stable'
+          
+      - run: flutter channel stable
+      - run: flutter upgrade
+      
       - run: flutter config --enable-web
       
       - run: flutter clean 
@@ -35,7 +39,7 @@ jobs:
       
       - run: git --work-tree build/web add --all
       - run: git commit -m "Automatic update"
-      - run: git push origin HEAD:update-pages --force
+      - run: git push origin HEAD:gh-pages --force
       
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
