--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -42,11 +42,19 @@ jobs:
       - run: git push origin HEAD:gh-pages --force
       
   deploy:
+    name: Deploy Web Build
+    needs: build
     runs-on: ubuntu-latest
+
     steps:
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./build/web
+    - name: Download Web Release
+      uses: actions/download-artifact@v2
+      with:
+        name: web-release
+
+    - name: Deploy to gh-pages
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./
       
