--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -41,26 +41,26 @@ jobs:
       - run: git commit -m "Automatic update"
       - run: git push origin HEAD:gh-pages --force
       
-#       - name: Upload Web Build Files
-#         uses: actions/upload-artifact@v2
-#         with:
-#           name: web-release
-#           path: ./build/web
+      - name: Upload Web Build Files
+        uses: actions/upload-artifact@v2
+        with:
+          name: web-release
+          path: ./build/web
       
-#   deploy:
-#     name: Deploy Web Build
-#     needs: build
-#     runs-on: ubuntu-latest
+  deploy:
+    name: Deploy Web Build
+    needs: build
+    runs-on: ubuntu-latest
 
-#     steps:
-#     - name: Download Web Release
-#       uses: actions/download-artifact@v2
-#       with:
-#         name: web-release
+    steps:
+    - name: Download Web Release
+      uses: actions/download-artifact@v2
+      with:
+        name: web-release
 
-#     - name: Deploy to gh-pages
-#       uses: peaceiris/actions-gh-pages@v3
-#       with:
-#         github_token: ${{ secrets.GITHUB_TOKEN }}
-#         publish_dir: ./
+    - name: Deploy to gh-pages
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./
       
