--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -27,7 +27,7 @@ jobs:
 #       - run: flutter pub cache repair
       
       
-      - run: flutter build web --base-href "/web/" --release
+      - run: flutter build web --base-href "/" --release
       - run: pwd
       - run: cd ./build/web
       - run: echo "mindong.uk" > ./build/web/CNAME
