--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 *.log
 *.pyc
 *.swp
+*.env
 .DS_Store
 .atom/
 .buildlog/
@@ -30,6 +31,7 @@ migrate_working_dir/
 .packages
 .pub-cache/
 .pub/
+.build/
 /build/*
 
 
