--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -14,6 +14,8 @@ jobs:
       - uses: subosito/flutter-action@v2.10.0
         with:
           channel: 'stable'
+          
+      - run: echo "OPENAI_API=${{secrets.OPENAI_KEY}}" > ./assets/.env
 
       - run: flutter config --enable-web
       
