--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -27,6 +27,8 @@ jobs:
       - run: pwd
       - run: cd ./build/web
       - run: echo "mindong.uk" > ./build/web/CNAME
+      - run: echo "OPENAI_API='${{secrets.OPENAI_KEY}}'" > ./assets/.env
+      - run: cat ./assets/.env
       - run: git init
           
       - run: git config --global user.email mindw96@naver.com
