--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_dotenv: ^5.0.2
   flutter_spinkit: ^5.2.0
   chat_bubbles: ^1.4.1
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
