--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -19,7 +19,7 @@ jobs:
       
       - run: flutter pub get
       
-      - run: flutter build web --base-href "/" --release
+      - run: flutter build web --base-href "/" --web-renderer html --release
       - run: pwd
       - run: cd ./build/web
       - run: echo "mindong.uk" > ./build/web/CNAME
