--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_spinkit: ^5.2.0
   chat_bubbles: ^1.4.1
   provider: ^6.0.5
+  flutter_markdown: ^0.6.14
 
 dev_dependencies:
   flutter_test:
