--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   currency_text_input_formatter: ^2.1.10
   dynamic_color: ^1.6.5
   awesome_bottom_bar: ^1.2.2
+  logging: ^1.2.0
 
 dev_dependencies:
   flutter_test:
