--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.6 <3.0.0'
+  sdk: '>=2.19.6'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -35,13 +35,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  http: ^0.13.5
+  http: ^1.2.1
   cp949_codec: ^1.0.0
   flutter_dotenv: ^5.0.2
   flutter_spinkit: ^5.2.0
   chat_bubbles: ^1.4.1
-  provider: ^6.0.5
-  flutter_markdown: ^0.6.14
+  provider: ^6.1.2
+  flutter_markdown: ^0.6.21
   currency_text_input_formatter: ^2.1.10
   dynamic_color: ^1.6.5
   awesome_bottom_bar: ^1.2.2
@@ -56,7 +56,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 
 # For information on the generic Dart part of this file, see the
