--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -8,10 +8,11 @@ jobs:
     name: Build Web
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
+          flutter-version: '3.27.0'
 
       - run: flutter config --enable-web
       
