--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,18 +34,19 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  http: ^1.2.1
-  cp949_codec: ^1.0.0
-  flutter_dotenv: ^5.0.2
-  flutter_spinkit: ^5.2.0
-  chat_bubbles: ^1.4.1
+  cupertino_icons: ^1.0.8
+  http: ^1.2.2
+  cp949_codec: ^1.0.2
+  flutter_dotenv: ^5.2.1
+  flutter_spinkit: ^5.2.1
+  chat_bubbles: ^1.6.0
   provider: ^6.1.2
-  flutter_markdown: ^0.7.1
-  currency_text_input_formatter: ^2.1.10
-  dynamic_color: ^1.6.5
-  awesome_bottom_bar: ^1.2.2
-  logging: ^1.2.0
+  flutter_markdown: ^0.7.4+3
+  currency_text_input_formatter: ^2.2.6
+  dynamic_color: ^1.7.0
+  awesome_bottom_bar: ^1.2.4
+  logging: ^1.3.0
+  google_generative_ai: ^0.4.6
 
 dev_dependencies:
   flutter_test:
