--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   awesome_bottom_bar: ^1.2.4
   logging: ^1.3.0
   google_generative_ai: ^0.4.6
+  firebase_core: ^3.8.1
+  firebase_auth: ^5.3.4
 
 dev_dependencies:
   flutter_test:
