feat: add .env file and hide api keys

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -17,6 +17,11 @@ jobs:
       - run: flutter config --enable-web
       
       - run: flutter pub get
+
+      - run: |
+          echo "OPENAI_API_KEY=${{secrets.OPENAI_API_KEY}}" >> .env
+          echo "UPSTAGE_API_KEY=${{secrets.UPSTAGE_API_KEY}}" >> .env
+          echo "GEMINI_API_KEY=${{secrets.GEMINI_API_KEY}}" >> .env
       
       # - run: flutter build web --base-href "/" --web-renderer html --release
       - run: flutter build web --base-href "/" --web-renderer canvaskit --release
