--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,7 +75,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/config/.env
+    - .env
     - assets/images/
   #   - assets/.env
   #   - images/a_dot_burr.jpeg
