--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -22,7 +22,7 @@ jobs:
       - run: flutter build web --base-href "/" --web-renderer canvaskit --release
       - run: pwd
       - run: cd ./build/web
-      - run: echo "mindong.uk" > ./build/web/CNAME
+      - run: echo "chat.mindong.uk" > ./build/web/CNAME
 
       - run: git init       
       - run: git config --global user.email mindw96@naver.com
