--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   google_generative_ai: ^0.4.6
   firebase_core: ^3.8.1
   firebase_auth: ^5.3.4
+  flutter_secure_storage: ^9.2.2
 
 dev_dependencies:
   flutter_test:
