--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,10 @@ dependencies:
   firebase_database: ^11.2.0
   dart_openai: ^5.1.0
   envied: ^1.0.0
+  image_network: ^2.5.6
+  image_downloader: ^0.31.0
+  path_provider: ^2.1.5
+  dio: ^5.7.0
 
 dev_dependencies:
   flutter_test:
