test: workflow test

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -17,9 +17,20 @@ jobs:
       - run: flutter config --enable-web
       
       - run: flutter pub get
-      
+
+      - name: Create .env.dev file
+        run: |
+          echo "OPEN_AI_API_KEY=${{ secrets.OPENAI_API_KEY }}" > .env.dev
+          echo "UPSTAGE_API_KEY=${{ secrets.UPSTAGE_API_KEY }}" >> .env.dev
+          echo "GEMINI_API_KEY=${{ secrets.UPSTAGE_API_KEY }}" >> .env.dev
+
+          dart run build_runner build
+
+          rm -rf .env.dev
+
       # - run: flutter build web --base-href "/" --web-renderer html --release
       - run: flutter build web --base-href "/" --web-renderer canvaskit --release
+
       - run: pwd
       - run: cd ./build/web
       - run: echo "chat.mindong.uk" > ./build/web/CNAME
