feat: add splash screen, change theme each chat screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   dio: ^5.7.0
   cached_network_image: ^3.4.1
   extended_image: ^9.0.7
+  flutter_native_splash: ^2.4.3
 
 dev_dependencies:
   flutter_test:
